[tool.poetry]
name = "ml-y-y"
version = "0.1.0"
description = ""
authors = ["Anton <tosha_maz@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
